[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Goal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Walls.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Ramp.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=8]
[ext_resource path="res://Music/231 THE IRON MAIDEN.ogg" type="AudioStream" id=9]
[ext_resource path="res://Scenes/Box.tscn" type="PackedScene" id=10]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[node name="Level1" type="Spatial"]

transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Loose" type="Area" parent="." index="0"]

editor/display_folded = true
transform = Transform( -30, 0, 1.3e-05, 0, 0.05, 0, 0, 0, -85.635, 93.5, -5.5, -80.9999 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Loose" index="0"]

transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 4, -1, -0.999998 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Goal" parent="." index="1" instance=ExtResource( 2 )]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 15, -8.99999 )

[node name="Area2" type="Area" parent="Goal" index="4"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Goal/Area2" index="0"]

transform = Transform( 3.65, 0, 0, 0, 4.10062, 0, 0, 0, 1, 4, -1, -0.999998 )
shape = SubResource( 1 )
disabled = false

[node name="Floor" parent="." index="2" instance=ExtResource( 3 )]

editor/display_folded = true

[node name="Walls2" parent="Floor" index="0" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.44664, 1.45019, 0 )

[node name="Walls" parent="Floor" index="2" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.49272, 1.45019, 0 )

[node name="Walls3" parent="Floor" index="3" instance=ExtResource( 4 )]

transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.0306854, 1.45019, -9.60159 )
_sections_unfolded = [ "Transform" ]

[node name="Walls4" parent="Floor" index="4" instance=ExtResource( 4 )]

transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.0306854, 1.45019, 9.49071 )
_sections_unfolded = [ "Transform" ]

[node name="Ball" parent="." index="3" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36.5, 11.1178, 2.28089e-06 )
mass = 30.0
can_sleep = false
linear_damp = 0.8
angular_damp = 0.8
_sections_unfolded = [ "Collision" ]

[node name="Floor2" parent="." index="4" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36.5, 9.5, 2.28089e-06 )

[node name="Ramp" parent="." index="5" instance=ExtResource( 6 )]

transform = Transform( -6.24999e-08, 0.17101, 1.87939, 1.41345e-07, 0.469846, -0.68404, -2, 2.78611e-08, -1.07073e-07, -13.5, 5, 2.36235e-06 )
_sections_unfolded = [ "Transform" ]

[node name="Player" parent="." index="6" instance=ExtResource( 7 )]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 2.40029, 1.5563, 0.0148377 )
script = ExtResource( 8 )
_sections_unfolded = [ "Axis Lock", "Collision", "Transform", "collision" ]

[node name="Camera" type="Camera" parent="Player" index="2"]

transform = Transform( -1.62921e-07, -0.965926, 0.258819, -1, 1.15202e-07, -1.99536e-07, 1.62921e-07, -0.258819, -0.965926, 2.5844, -0.217425, -17.6281 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="WinPanel" type="Panel" parent="." index="7"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 372.0
margin_top = 292.0
margin_right = 680.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="WinPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 98.0
margin_top = 29.0
margin_right = 225.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_constants/shadow_offset_x = 5
text = "You Win!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Material", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="LoosePanel" type="Panel" parent="." index="8"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 372.0
margin_top = 292.0
margin_right = 680.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="LabelLoose" type="Label" parent="LoosePanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 29.0
margin_right = 225.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_constants/shadow_offset_x = 5
text = "You Loose!
Enter for restart level"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Material", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="DirectionalLight" type="DirectionalLight" parent="." index="9"]

transform = Transform( 0.996195, 0, 0.0871555, -0.0868238, 0.0871554, 0.992404, -0.00759602, -0.996195, 0.0868238, 0, 42.5, 0 )
layers = 1
light_color = Color( 0.987407, 0.988281, 0.876328, 1 )
light_energy = 0.4
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Light", "Shadow" ]

[node name="Level_Scores" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 9.0
margin_right = 49.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Level Scores: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Global_Scores" type="Label" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 25.0
margin_right = 113.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "All Scores: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="12"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="Spatial" type="Spatial" parent="." index="13"]

[node name="Box" parent="Spatial" index="0" instance=ExtResource( 10 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -6 )

[node name="Box2" parent="Spatial" index="1" instance=ExtResource( 10 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 4.5, 9 )

[node name="Box3" parent="Spatial" index="2" instance=ExtResource( 10 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.5, 6.5, -6.5 )

[connection signal="body_entered" from="Loose" to="." method="_on_Loose_body_entered"]

[connection signal="body_entered" from="Goal/Area2" to="." method="_on_Area2_body_entered"]


